tests/baselines/reference/parserGreaterThanTokenAmbiguity14.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity14.ts(2,1): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity14.ts (1 errors) ====
    1 >>
    = 2;
    ~
!!! error TS1109: Expression expected.